kubernetes/apps/actual-budget/overlays/prod/deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  selector:
    matchLabels:
      app: actual-budget
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: ghcr.io/actualbudget/actual:26.8.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 384Mi
              cpu: 50m
          ports:
            - containerPort: 5006
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget-data
