kubernetes/apps/actual-budget/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  selector:
    app: actual-budget
  ports:
    - name: main
      port: 5006
      targetPort: 5006
