kubernetes/apps/actual-budget/overlays/prod/ingress-route.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: actual-budget-ingress
  namespace: actual-budget
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    # - websecure-ext # Disabled for now.
  routes:
    - match: Host(`budget.sobrinho.pt`)
      kind: Rule
      services:
        - name: actual-budget
          port: http
  tls:
    secretName: actual-budget-cert
